[package]
name = "firmware"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
ds323x = "0.4"
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5.9"
heapless = "0.7"
panic-halt = "0.2"
rtt-target = { version = "0.3", features = ["cortex-m"] }
shared-bus-rtic = "0.2"
ufmt = "0.1"
usb-device = "0.2"
usbd-serial = "0.1"
veml6030 = "0.1.2"

[dependencies.stm32f4xx-hal]
version = "0.10.1"
features = ["rt", "stm32f411", "usb_fs"]
