[package]
name = "observer-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["std", "color", "help", "usage", "error-context", "derive", "cargo", "env"], default-features = false }
data-encoding = "2"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serialport = "4"
threema-gateway = "0.15"
toml = "0.7"